# episodic-log

./: .env.example  .gitignore  README.md  pyproject.toml  rebuild_venv.sh  run_pipeline.sh  setup.sh
data/: sessions_index.jsonl
episodic_log/agent/: __init__.py  batch_loop.py  loop.py  trace.py
episodic_log/conditions/: __init__.py  adversarial.py  amnesiac.py  base.py  baseline.py  episodic.py  external.py  full_context.py  grep_recall.py  md_memory.py  proactive.py  recall.py  topk.py
episodic_log/core/: __init__.py  log_reader.py  log_writer.py  turn_event.py  turn_summary.py
episodic_log/ingestor/: __init__.py  longmemeval.py
episodic_log/judge/: __init__.py  chd_judge.py
episodic_log/metrics/: __init__.py  chd_metrics.py
episodic_log/providers/: __init__.py  base.py  groq_provider.py  huggingface_provider.py  vllm_provider.py
episodic_log/retrieval/: __init__.py  bm25_index.py  embedding_index.py  summary_store.py
episodic_log/summarizers/: __init__.py  base.py  echo.py  haiku.py  lexical.py  scout.py  self_summarizer.py  structured.py
episodic_log/tools/: __init__.py  grep_memory.py  load_turn.py  session_tools.py
paper/: chd_paper.tex  references.bib
scripts/: evaluate.py  ingest.py  judge.py  run_sweep.py  score.py  summarize.py
tests/unit/: test_fixes.py
